pc - add csv download endpoint for course data by quarter
Tests in the next commit