@@ -3,8 +3,9 @@ package edu.ucsb.cs156.courses.controllers;
 import com.opencsv.bean.StatefulBeanToCsvBuilder;
 import com.opencsv.exceptions.CsvDataTypeMismatchException;
 import com.opencsv.exceptions.CsvRequiredFieldEmptyException;
-import edu.ucsb.cs156.courses.entities.EnrollmentDataPoint;
-import edu.ucsb.cs156.courses.repositories.EnrollmentDataPointRepository;
+import edu.ucsb.cs156.courses.collections.ConvertedSectionCollection;
+import edu.ucsb.cs156.courses.documents.ConvertedSection;
+import edu.ucsb.cs156.courses.models.SectionCSVLine;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -16,6 +17,7 @@ import java.io.OutputStreamWriter;
 import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.util.Streamable;
@@ -30,14 +32,14 @@ import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBo
 
 @Slf4j
 @Tag(name = "API for enrollment data")
-@RequestMapping("/api/enrollment")
+@RequestMapping("/api/courses")
 @RestController
-public class EnrollmentController extends ApiController {
+public class CoursesCSVController extends ApiController {
 
-  @Autowired EnrollmentDataPointRepository enrollmentDataPointRepository;
+  @Autowired ConvertedSectionCollection convertedSectionCollection;
 
   @Operation(
-      summary = "Download Enrollment Data as CSV File",
+      summary = "Download Course List as CSV File",
       description = "Returns a CSV file as a response",
       responses = {
         @ApiResponse(
@@ -50,7 +52,7 @@ public class EnrollmentController extends ApiController {
         @ApiResponse(responseCode = "500", description = "Internal Server Error")
       })
   @GetMapping(value = "/csv/quarter", produces = "text/csv")
-  public ResponseEntity<StreamingResponseBody> csvForQuarter(
+  public ResponseEntity<StreamingResponseBody> csvForCourses(
       @Parameter(name = "yyyyq", description = "quarter in yyyyq format", example = "20252")
           @RequestParam
           String yyyyq,
@@ -63,15 +65,22 @@ public class EnrollmentController extends ApiController {
       throws Exception, IOException {
     StreamingResponseBody stream =
         (outputStream) -> {
-          Iterable<EnrollmentDataPoint> iterable = enrollmentDataPointRepository.findByYyyyq(yyyyq);
-          List<EnrollmentDataPoint> list = Streamable.of(iterable).toList();
+          Iterable<ConvertedSection> iterable = convertedSectionCollection.findByQuarter(yyyyq);
+
+          List<SectionCSVLine> list =
+              Streamable.of(iterable).toList().stream()
+                  .map(
+                      section -> {
+                        return SectionCSVLine.toSectionCSVLine(section);
+                      })
+                  .collect(Collectors.toList());
 
           try (Writer writer = new OutputStreamWriter(outputStream, StandardCharsets.UTF_8)) {
             try {
               if (testException.equals("CsvDataTypeMismatchException")) {
                 throw new CsvDataTypeMismatchException("test exception");
               }
-              new StatefulBeanToCsvBuilder<EnrollmentDataPoint>(writer).build().write(list);
+              new StatefulBeanToCsvBuilder<SectionCSVLine>(writer).build().write(list);
             } catch (CsvDataTypeMismatchException | CsvRequiredFieldEmptyException e) {
               log.error("Error writing CSV file", e);
               throw new IOException("Error writing CSV file: " + e.getMessage());
@@ -83,7 +92,7 @@ public class EnrollmentController extends ApiController {
         .contentType(MediaType.parseMediaType("text/csv; charset=UTF-8"))
         .header(
             HttpHeaders.CONTENT_DISPOSITION,
-            String.format("attachment;filename=enrollment_%s.csv", yyyyq))
+            String.format("attachment;filename=courses_%s.csv", yyyyq))
         .header(HttpHeaders.CONTENT_TYPE, "text/csv; charset=UTF-8")
         .header(HttpHeaders.ACCESS_CONTROL_EXPOSE_HEADERS, HttpHeaders.CONTENT_DISPOSITION)
         .body(stream);
